@@ -415,7 +415,7 @@ pevt_generic_none_help
 Ignore Header
 XP_TE_IGNOREHEADER
 pevt_generic_none_help
-%C08,02 Hostmask                  PRIV NOTI CHAN CTCP INVI UNIG %O
+%C08,02 Hostmask                  PRIV NOTI CHAN CTCP DCC  INVI UNIG %O
 0
 
 Ignore Remove
