@@ -20,8 +20,9 @@
  - Speed up dcc recv, send and chat windows.
  - Fixed tab-arrow buttons show/hide (Lloyd Williams) [783681].
  - Fixed lastlog bugs.
- - win32: Faster tinting, and use MMX when in 16 or 32bit color.
- - 
+ - win32: Faster tinting, and uses MMX when in 16 or 32bit color.
+ - Execute /sigusr2 on receiving SIGUSR2 signal (Michael Guidero).
+ - /IGNORE command and window now have an extra "DCC" category.
  - 
 
 
